opam-version: "2.0"
name: "mediawiki-api"
maintainer: "Petter A. Urkedal <paurkedal@gmail.com>"
authors: "Petter A. Urkedal <paurkedal@gmail.com>"
license: "LGPL-3 with OCaml linking exception"
homepage: "https://github.com/paurkedal/ocaml-mediawiki-api/"
bug-reports: "https://github.com/paurkedal/ocaml-mediawiki-api/issues"
depends: [
  "ocaml"
  "calendar"
  "cmdliner"
  "cohttp"
  "cohttp-lwt-unix"
  "conduit"
  "conduit-lwt-unix"
  "jbuilder" {build}
  "kojson"
  "lwt"
  "lwt_log"
  "lwt_ssl"
  "ocaml-xdg-basedir"
  "pcre"
  "prime"
  "ppx_compose" {build}
  "yojson"
]
build: ["jbuilder" "build" "-p" name "-j" jobs]
dev-repo: "git+https://github.com/paurkedal/ocaml-mediawiki-api.git"
