opam-version: "2.0"
name: "mediawiki-api"
maintainer: "Petter A. Urkedal <paurkedal@gmail.com>"
authors: "Petter A. Urkedal <paurkedal@gmail.com>"
license: "LGPL-3 with OCaml linking exception"
homepage: "https://github.com/paurkedal/ocaml-mediawiki-api/"
bug-reports: "https://github.com/paurkedal/ocaml-mediawiki-api/issues"
depends: [
  "calendar"
  "cmdliner"
  "cohttp"
  "cohttp-lwt"
  "cohttp-lwt-unix"
  "conduit"
  "conduit-lwt"
  "conduit-lwt-unix"
  "dune"
  "kojson"
  "lwt"
  "lwt_log"
  "ocaml"
  "ocaml-xdg-basedir"
  "pcre"
  "ppx_compose"
  "prime"
  "ssl"
  "yojson"
]
build: ["jbuilder" "build" "-p" name "-j" jobs]
dev-repo: "git+https://github.com/paurkedal/ocaml-mediawiki-api.git"
