opam-version: "2.0"
name: "mediawiki-api"
synopsis: "Experimental MediaWiki API client"
maintainer: "Petter A. Urkedal <paurkedal@gmail.com>"
authors: "Petter A. Urkedal <paurkedal@gmail.com>"
license: "LGPL-3 with OCaml linking exception"
homepage: "https://github.com/paurkedal/ocaml-mediawiki-api/"
bug-reports: "https://github.com/paurkedal/ocaml-mediawiki-api/issues"
depends: [
  "calendar"
  "cmdliner"
  "cohttp"
  "cohttp-lwt"
  "cohttp-lwt-unix"
  "conduit"
  "conduit-lwt"
  "conduit-lwt-unix"
  "dune"
  "kojson"
  "logs"
  "lwt"
  "ocaml"
  "ocaml-xdg-basedir"
  "ppx_compose"
  "prime"
  "ssl"
  "yojson"
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
dev-repo: "git+https://github.com/paurkedal/ocaml-mediawiki-api.git"
