(library
  (name mediawiki_api)
  (public_name mediawiki-api)
  (wrapped false)
  (modules
    Mwapi
    Mwapi_common
    Mwapi_cookiejar
    Mwapi_lwt
    Mwapi_createaccount
    Mwapi_edit
    Mwapi_login
    Mwapi_parse
    Mwapi_query
    Mwapi_query_meta
    Mwapi_query_list
    Mwapi_query_prop
    Mwapi_query_prop_revisions
    ;; internal
    Mwapi_prereq)
  (private_modules Mwapi_prereq)
  (preprocess (pps ppx_compose))
  (libraries
    cohttp
    cohttp-lwt
    cohttp-lwt-unix
    conduit
    conduit-lwt
    conduit-lwt-unix
    kojson
    logs
    logs.lwt
    lwt
    ppx_compose
    prime
    ptime
    ssl
    xdg-basedir
    yojson))
